--- a/web/themes/custom/m3_fondomaria_theme/sass/global/_view-styles.scss
+++ b/web/themes/custom/m3_fondomaria_theme/sass/global/_view-styles.scss
@@ -76,6 +76,9 @@
     }
 
     .view__pager {
+      max-width: 100%;
+      overflow: hidden;
+
       .pager {
         margin-top: 0;
       }
@@ -114,6 +117,10 @@
       .view__exposed {
         padding-left: $spacer-sm;
         padding-right: $spacer-sm;
+      }
+      
+      .view__content {
+        padding-bottom: 0;
       }
     }
   }
